--- a/main-style.css
+++ b/main-style.css
@@ -1,10 +1,14 @@
 body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   background-color: black;
 }
 
 #solar-canvas {
   background-color: black;
-  border: 0.5px solid grey;
+}
+
+audio {
+  width: 15%;
 }
