--- a/main-style.css
+++ b/main-style.css
@@ -1,10 +1,27 @@
 body {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
   background-color: black;
+  border: 1px solid lime;
+}
+
+nav {
+  height: 100%;
+  width: 10%;
+  color: white;
+  font-family: 'Chakra Petch', sans-serif;
+  border: 1px solid pink;
+}
+
+nav p {
+  text-align: center;
+}
+
+nav audio {
+  width: 100%;
 }
 
 #solar-canvas {
   background-color: black;
+  border: 1px solid red;
 }
